--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
+    "@tailwindcss/typography": "^0.5.13",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "vite": "^5.2.2"
   },
   "eslintConfig": {
