--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@preact/preset-vite": "^2.8.2",
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.2"
