--- a/package.json
+++ b/package.json
@@ -18,15 +18,27 @@
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.2",
     "eslint": "^9.4.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-preact": "^1.4.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.2"
   },
   "eslintConfig": {
-    "extends": "preact",
+    "extends": [
+      "eslint:recommended",
+      "google",
+      "preact"
+    ],
     "plugins": [
       "prettier"
+    ]
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss"
     ]
   }
 }
