--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build-doc": "For GitHub pages, we need the 404.html file at the root of the dist folder, otherwise it doesn't work.",
     "build": "vite build && mv ./dist/404/index.html ./dist/404.html && rm -r ./dist/404",
     "preview": "vite preview"
   },
